browser/scss/directives/navbar.scss
navbar {

  display: block;
  background: #001D26;

  div.container {
    margin: 0;
    width: 100%;
  }

  .lower-container {
    padding-bottom: 10px;

    .form-group {
      border-radius: 5px;
      width: 100%;
    }
  }

  .form-inline {
    .input-group {
      width: 100%;

      input {
        width: 80%;
        height: 28px;
      }
      button {
        width: 20%;
        position: relative;
        top: -1px;
      }
      .input-group-addon {
        cursor: pointer;
      }
    }
  }

  .navbar-right {
    margin-right: 1%;
  }
  fullstack-logo {
    padding-top: 10px;
    margin-right: 20px;
    width: 30px;
  }

  a {
    color: white;
    &:hover {
      color: red;
    }
  }

  .nav > li > a {
    cursor: pointer;
    &.active {
      color: #D9620E;
    }
    &:hover {
      transition: color 0.2s;
    }
    &:focus {
      color: #D9620E;
      background: transparent;
    }
  }

  .btn-nav {
    background-color: #001D26;
    color: white;
    border: 1px solid #c1c1c1;
    border-radius: 5px;
  }

  hr {
    width: 90%;
    opacity: 0.2;
    margin-top: 0;
    margin-bottom: 10px;
  }

  .btn:focus,
  .btn:hover{
    color: #D9620E;
  }
}

